# ringdeque

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  test.yml
bench/: RESULTS.md  analyze_three.py  three_way.py  threeway-double-ratios.tsv  threeway-double.tsv  threeway-mask-ratios.tsv  threeway-mask.tsv  threeway-ratios.tsv  threeway.tsv
src/ringdeque/: __init__.py  _ringdeque.c
tests/: test_differential.py
